--- a/app/src/main/res/layout/activity_nuevo_gestor.xml
+++ b/app/src/main/res/layout/activity_nuevo_gestor.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="250dp"
-        android:layout_height="300dp"
+        android:layout_height="wrap_content"
         android:divider="@drawable/divider_nuevo_gestor"
         android:gravity="center"
         android:orientation="vertical"
@@ -18,13 +18,38 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.6">
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/imagen"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:adjustViewBounds="false"
+            android:cropToPadding="false"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:srcCompat="@drawable/ic_launcher_foreground" />
+
+        <EditText
+            android:id="@+id/dni"
+            android:layout_width="@dimen/ancho_cajas_texto"
+            android:layout_height="@dimen/alto_cajas_texto"
+            android:background="@drawable/bordes"
+            android:backgroundTint="@color/white"
+            android:ems="10"
+            android:hint="DNI"
+            android:inputType="text"
+            android:textAlignment="center"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/contraseña"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
+            android:layout_width="@dimen/ancho_cajas_texto"
+            android:layout_height="@dimen/alto_cajas_texto"
             android:background="@drawable/bordes"
             android:backgroundTint="@color/white"
             android:ems="10"
@@ -35,8 +60,8 @@
 
         <EditText
             android:id="@+id/nombre"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
+            android:layout_width="@dimen/ancho_cajas_texto"
+            android:layout_height="@dimen/alto_cajas_texto"
             android:background="@drawable/bordes"
             android:backgroundTint="@color/white"
             android:ems="10"
@@ -47,8 +72,8 @@
 
         <EditText
             android:id="@+id/apellido"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
+            android:layout_width="@dimen/ancho_cajas_texto"
+            android:layout_height="@dimen/alto_cajas_texto"
             android:background="@drawable/bordes"
             android:backgroundTint="@color/white"
             android:ems="10"
@@ -59,8 +84,8 @@
 
         <EditText
             android:id="@+id/telefono"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
+            android:layout_width="@dimen/ancho_cajas_texto"
+            android:layout_height="@dimen/alto_cajas_texto"
             android:background="@drawable/bordes"
             android:backgroundTint="@color/white"
             android:ems="10"
@@ -68,31 +93,18 @@
             android:inputType="phone"
             android:textAlignment="center"
             android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/crear"
+            android:layout_width="@dimen/ancho_cajas_texto"
+            android:layout_height="@dimen/alto_boton"
+            android:backgroundTint="#00000000"
+            android:text="Crear cuenta"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:strokeColor="@color/white"
+            app:strokeWidth="2.5dp" />
+
     </LinearLayout>
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/añadirGestor"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        android:textAlignment="center"
-        app:backgroundTint="#1F62FF"
-        app:ensureMinTouchTargetSize="false"
-        app:fabSize="normal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-        app:srcCompat="@android:drawable/ic_input_add" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
