--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="cobalt_blue">#1447AC</color>
+    <color name="oxford_blue">#030537</color>
+    <color name="earlie_black">#1D1D1D</color>
+    <color name="carrot_orange">#EA9010</color>
 </resources>
