--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.SerAdmin" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.FireBaseAD" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/cobalt_blue</item>
         <item name="colorPrimaryVariant">@color/early_black</item>
