--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -50,7 +50,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:hint="Nombre de Usuario"
+            android:hint="DNI"
             android:inputType="text"
             android:maxLength="180"
             android:maxLines="1"
