--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -61,18 +61,6 @@
             android:textColorHint="@color/white"
             android:backgroundTint="@color/white" />
 
-<!--        <EditText-->
-<!--            android:id="@+id/user"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="50dp"-->
-<!--            android:background="@drawable/bordes"-->
-<!--            android:backgroundTint="@color/white"-->
-<!--            android:ems="10"-->
-<!--            android:hint="Nombre de Usuario"-->
-<!--            android:inputType="textPersonName"-->
-<!--            android:textAlignment="center"-->
-<!--            android:textStyle="bold" />-->
-
         <EditText
             android:id="@+id/password"
             android:layout_width="match_parent"
@@ -89,20 +77,8 @@
             android:textColorHint="@color/white"
             android:backgroundTint="@color/white" />
 
-<!--        <EditText-->
-<!--            android:id="@+id/password"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="50dp"-->
-<!--            android:background="@drawable/bordes"-->
-<!--            android:backgroundTint="@color/white"-->
-<!--            android:ems="10"-->
-<!--            android:hint="Contraseña"-->
-<!--            android:inputType="textPassword"-->
-<!--            android:textAlignment="center"-->
-<!--            android:textStyle="bold" />-->
-
         <Button
-            android:id="@+id/sms"
+            android:id="@+id/log"
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:backgroundTint="#00000000"
@@ -111,7 +87,21 @@
             android:textStyle="bold"
             app:strokeColor="@color/white"
             app:strokeWidth="2.5dp" />
+
+
+        <TextView
+            android:id="@+id/alert"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:text="DNI o contraseña incorrectas"
+            android:textColor="@color/carrot_orange"
+            android:visibility="invisible"
+            android:layout_marginTop="-15dp"/>
+
     </LinearLayout>
+
 
     <ImageView
         android:id="@+id/logo"
