--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,59 +11,70 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:gravity="center_vertical"
-        >
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="40dp"
+        tools:layout_editor_absoluteY="-1dp">
 
         <Button
             android:id="@+id/gestor"
             android:layout_width="match_parent"
             android:layout_height="55dp"
+            android:layout_marginTop="20dp"
             android:backgroundTint="#00000000"
             android:text="Gestionar Cuenta Gestor"
             android:textSize="16sp"
             android:textStyle="bold"
             app:strokeColor="@color/white"
-            app:strokeWidth="2.5dp"
-            android:layout_marginTop="20dp"/>
+            app:strokeWidth="2.5dp" />
 
         <Button
             android:id="@+id/clientes"
             android:layout_width="match_parent"
             android:layout_height="55dp"
+            android:layout_marginTop="20dp"
             android:backgroundTint="#00000000"
             android:text="Gestionar Clientes"
             android:textSize="16sp"
             android:textStyle="bold"
             app:strokeColor="@color/white"
-            app:strokeWidth="2.5dp"
-            android:layout_marginTop="20dp" />
+            app:strokeWidth="2.5dp" />
 
         <Button
             android:id="@+id/archivos"
             android:layout_width="match_parent"
             android:layout_height="55dp"
+            android:layout_marginTop="20dp"
             android:backgroundTint="#00000000"
             android:text="Gestionar Archivos"
             android:textSize="16sp"
             android:textStyle="bold"
             app:strokeColor="@color/white"
-            app:strokeWidth="2.5dp"
-            android:layout_marginTop="20dp"/>
+            app:strokeWidth="2.5dp" />
 
         <Button
             android:id="@+id/eventos"
             android:layout_width="match_parent"
             android:layout_height="55dp"
+            android:layout_marginTop="20dp"
             android:backgroundTint="#00000000"
             android:text="Gestionar Eventos"
             android:textSize="16sp"
             android:textStyle="bold"
             app:strokeColor="@color/white"
-            app:strokeWidth="2.5dp"
-            android:layout_marginTop="20dp"/>
+            app:strokeWidth="2.5dp" />
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/logOut"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Log Out"
+        android:textColor="#1F62FF"
+        android:textStyle="bold"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
