--- a/app/src/main/res/layout/activity_nuevo_gestor.xml
+++ b/app/src/main/res/layout/activity_nuevo_gestor.xml
@@ -36,63 +36,83 @@
 
         <EditText
             android:id="@+id/dni"
-            android:layout_width="@dimen/ancho_cajas_texto"
-            android:layout_height="@dimen/alto_cajas_texto"
-            android:background="@drawable/bordes"
-            android:backgroundTint="@color/white"
-            android:ems="10"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:hint="DNI"
             android:inputType="text"
-            android:textAlignment="center"
-            android:textStyle="bold" />
+            android:maxLength="180"
+            android:maxLines="1"
+            android:minEms="20"
+            android:textCursorDrawable="@null"
+            android:textSize="@dimen/day_text_size"
+            android:textColor="@color/white"
+            android:textColorHint="@color/hint_white"
+            android:backgroundTint="@color/white" />
 
         <EditText
             android:id="@+id/contraseña"
-            android:layout_width="@dimen/ancho_cajas_texto"
-            android:layout_height="@dimen/alto_cajas_texto"
-            android:background="@drawable/bordes"
-            android:backgroundTint="@color/white"
-            android:ems="10"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:hint="Contraseña"
-            android:inputType="textPassword"
-            android:textAlignment="center"
-            android:textStyle="bold" />
+            android:inputType="text"
+            android:maxLength="180"
+            android:maxLines="1"
+            android:minEms="20"
+            android:textCursorDrawable="@null"
+            android:textSize="@dimen/day_text_size"
+            android:textColor="@color/white"
+            android:textColorHint="@color/hint_white"
+            android:backgroundTint="@color/white" />
 
         <EditText
             android:id="@+id/nombre"
-            android:layout_width="@dimen/ancho_cajas_texto"
-            android:layout_height="@dimen/alto_cajas_texto"
-            android:background="@drawable/bordes"
-            android:backgroundTint="@color/white"
-            android:ems="10"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:hint="Nombre"
-            android:inputType="textPersonName"
-            android:textAlignment="center"
-            android:textStyle="bold" />
+            android:inputType="text"
+            android:maxLength="180"
+            android:maxLines="1"
+            android:minEms="20"
+            android:textCursorDrawable="@null"
+            android:textSize="@dimen/day_text_size"
+            android:textColor="@color/white"
+            android:textColorHint="@color/hint_white"
+            android:backgroundTint="@color/white" />
 
         <EditText
             android:id="@+id/apellido"
-            android:layout_width="@dimen/ancho_cajas_texto"
-            android:layout_height="@dimen/alto_cajas_texto"
-            android:background="@drawable/bordes"
-            android:backgroundTint="@color/white"
-            android:ems="10"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:hint="Apellido"
-            android:inputType="textPersonName"
-            android:textAlignment="center"
-            android:textStyle="bold" />
+            android:inputType="text"
+            android:maxLength="180"
+            android:maxLines="1"
+            android:minEms="20"
+            android:textCursorDrawable="@null"
+            android:textSize="@dimen/day_text_size"
+            android:textColor="@color/white"
+            android:textColorHint="@color/hint_white"
+            android:backgroundTint="@color/white" />
 
         <EditText
             android:id="@+id/telefono"
-            android:layout_width="@dimen/ancho_cajas_texto"
-            android:layout_height="@dimen/alto_cajas_texto"
-            android:background="@drawable/bordes"
-            android:backgroundTint="@color/white"
-            android:ems="10"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:hint="Teléfono"
-            android:inputType="phone"
-            android:textAlignment="center"
-            android:textStyle="bold" />
+            android:inputType="text"
+            android:maxLength="180"
+            android:maxLines="1"
+            android:minEms="20"
+            android:textCursorDrawable="@null"
+            android:textSize="@dimen/day_text_size"
+            android:textColor="@color/white"
+            android:textColorHint="@color/hint_white"
+            android:backgroundTint="@color/white" />
 
         <Button
             android:id="@+id/crear"
