--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,10 @@
         <item name="android:statusBarColor">@color/earlie_black</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="Theme.FireBaseAD.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+    <style name="Theme.FireBaseAD.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="Theme.FireBaseAD.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
