--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -105,4 +105,5 @@
     <dimen name="quick_filter_inactive_line_size">2dp</dimen>
     <dimen name="zero">0dp</dimen>
     <dimen name="alto_boton">60dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
