--- a/app/src/main/res/layout/caja_perfiles.xml
+++ b/app/src/main/res/layout/caja_perfiles.xml
@@ -10,24 +10,11 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/Letra"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="2dp"
-            android:text="Letra"
-            android:textColor="#FFFFFF" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
         android:layout_height="60dp"
         android:background="@drawable/caja_perfiles">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/imagenCajaPerfiles"
+            android:id="@+id/imagen_cliente"
             android:layout_width="84dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
@@ -38,12 +25,24 @@
 
 
         <TextView
-            android:id="@+id/nomClienteCajaPerfiles1"
-            android:layout_width="match_parent"
+            android:id="@+id/nombre_cliente"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:text="Pepe"
-            android:textColor="#FFFFFF"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
+            android:textColor="#0B0A0A"
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/apellido_cliente"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="20dp"
+            android:text="Pepito"
+            android:textColor="#0E0E0E"
             android:textSize="24sp" />
 
     </LinearLayout>
