--- a/app/src/main/res/layout/recycler_eventos.xml
+++ b/app/src/main/res/layout/recycler_eventos.xml
@@ -47,11 +47,25 @@
         android:layout_height="562dp"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/cabeceraRecyclerEventos"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:text="Eventos"
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/RVEventos"
             android:layout_width="match_parent"
             android:layout_height="590dp"
-            android:paddingTop="5dp" />
+            android:paddingTop="5dp" >
+
+        </androidx.recyclerview.widget.RecyclerView>
 
     </LinearLayout>
 
