--- a/app/src/main/res/layout/activity_nuevo_evento.xml
+++ b/app/src/main/res/layout/activity_nuevo_evento.xml
@@ -47,10 +47,31 @@
             android:maxLines="1"
             android:minEms="20"
             android:textCursorDrawable="@null"
+            android:focusable="false"
+            android:clickable="true"
             android:textSize="@dimen/day_text_size"
             android:textColor="@color/white"
             android:textColorHint="@color/hint_white"
             android:backgroundTint="@color/white" />
+
+        <EditText
+            android:id="@+id/horaInicioCrearEvento"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Hora de Inicio"
+            android:inputType="text"
+            android:maxLength="180"
+            android:maxLines="1"
+            android:minEms="20"
+            android:textCursorDrawable="@null"
+            android:focusable="false"
+            android:clickable="true"
+            android:textSize="@dimen/day_text_size"
+            android:textColor="@color/white"
+            android:textColorHint="@color/hint_white"
+            android:backgroundTint="@color/white" />
+
 
         <EditText
             android:id="@+id/fechaFinCrearEvento"
@@ -63,6 +84,27 @@
             android:maxLines="1"
             android:minEms="20"
             android:textCursorDrawable="@null"
+            android:focusable="false"
+            android:clickable="true"
+            android:textSize="@dimen/day_text_size"
+            android:textColor="@color/white"
+            android:textColorHint="@color/hint_white"
+            android:backgroundTint="@color/white" />
+
+
+        <EditText
+            android:id="@+id/horaFinCrearEvento"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Hora de Fin"
+            android:inputType="text"
+            android:maxLength="180"
+            android:maxLines="1"
+            android:minEms="20"
+            android:textCursorDrawable="@null"
+            android:focusable="false"
+            android:clickable="true"
             android:textSize="@dimen/day_text_size"
             android:textColor="@color/white"
             android:textColorHint="@color/hint_white"
@@ -106,7 +148,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Descripción"
-            android:inputType="numberDecimal"
+            android:inputType="text"
             android:maxLength="180"
             android:maxLines="1"
             android:minEms="20"
