--- a/app/src/main/res/layout/caja_archivos.xml
+++ b/app/src/main/res/layout/caja_archivos.xml
@@ -9,22 +9,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/Letra"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="2dp"
-            android:text="Archivos"
-            android:textColor="#FFFFFF" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="70dp"
         android:background="@drawable/caja_perfiles">
-
 
         <ImageView
             android:id="@+id/imagenArchivo"
@@ -35,7 +21,7 @@
             android:scaleType="fitCenter" />
 
         <TextView
-            android:id="@+id/nomArchivo"
+            android:id="@+id/idNombreArchivo1"
             android:layout_width="158dp"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
