--- a/app/src/main/res/layout/activity_nuevo_archivo.xml
+++ b/app/src/main/res/layout/activity_nuevo_archivo.xml
@@ -22,7 +22,7 @@
             app:srcCompat="@android:drawable/ic_menu_add" />
 
         <SearchView
-            android:id="@+id/buscador"
+            android:id="@+id/buscadorArchivo"
             android:layout_width="236dp"
             android:layout_height="match_parent"
             android:layout_marginStart="10dp"
