--- a/app/src/main/res/layout/activity_detalles_cliente.xml
+++ b/app/src/main/res/layout/activity_detalles_cliente.xml
@@ -7,7 +7,8 @@
     android:layout_height="match_parent"
     android:background="@drawable/gradient"
     android:orientation="vertical"
-    android:textAlignment="center">
+    android:textAlignment="center"
+    tools:context=".DetallesClienteActivity">
 
     <LinearLayout
         android:id="@+id/Cabezera"
