--- a/app/src/main/res/layout/activity_cliente_main.xml
+++ b/app/src/main/res/layout/activity_cliente_main.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".ClienteMain">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -47,11 +48,26 @@
         android:layout_height="562dp"
         android:orientation="vertical">
 
+
+        <TextView
+            android:id="@+id/cabeceraRecyclerEventos"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:text="Clientes"
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/RVClientes"
             android:layout_width="match_parent"
             android:layout_height="590dp"
-            android:paddingTop="5dp" />
+            android:paddingTop="8dp">
+
+        </androidx.recyclerview.widget.RecyclerView>
 
     </LinearLayout>
 
