--- a/app/src/main/res/layout/caja_perfiles.xml
+++ b/app/src/main/res/layout/caja_perfiles.xml
@@ -4,45 +4,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#00FFFFFF"
+    android:background="#001B51"
     android:orientation="vertical"
     android:padding="2dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="@drawable/caja_perfiles">
+        android:background="@drawable/caja_perfiles"
+        >
 
-        <de.hdodenhof.circleimageview.CircleImageView
+        <ImageView
             android:id="@+id/imagen_cliente"
-            android:layout_width="84dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:src="@drawable/pexels_polina_kovaleva_5927743"
-            app:civ_border_color="#00FFFFFF"
-            app:civ_border_width="2dp" />
-        <!--         app:civ_shadow="true"/> -->
+            android:layout_width="110dp"
+            android:layout_height="45dp"
+            android:layout_marginTop="8dp"
+            android:src="@drawable/zic_people_vector" />
 
 
         <TextView
             android:id="@+id/nombre_cliente"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:text="Pepe"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
-            android:textColor="#0B0A0A"
+            android:layout_width="140dp"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:text="NOMBRE"
+            android:textColor="#FFFFFF"
             android:textSize="24sp" />
 
         <TextView
-            android:id="@+id/apellido_cliente"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/dni_cliente"
+            android:layout_width="120dp"
+            android:layout_height="match_parent"
+            android:layout_marginTop="9dp"
+
+            android:layout_weight="3"
             android:layout_gravity="center_vertical"
-            android:layout_marginRight="20dp"
-            android:text="Pepito"
-            android:textColor="#0E0E0E"
+            android:text="DNI"
+            android:textColor="#FFFFFF"
             android:textSize="24sp" />
 
     </LinearLayout>
