--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,33 +49,35 @@
             android:id="@+id/user"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/white"
             android:gravity="center"
             android:hint="DNI"
             android:inputType="text"
             android:maxLength="180"
             android:maxLines="1"
             android:minEms="20"
-            android:textCursorDrawable="@null"
-            android:textSize="@dimen/day_text_size"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
-            android:backgroundTint="@color/white" />
+            android:textCursorDrawable="@null"
+            android:textSize="@dimen/day_text_size"
+            tools:ignore="TouchTargetSizeCheck" />
 
         <EditText
             android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/white"
             android:gravity="center"
             android:hint="Contraseña"
             android:inputType="textPassword"
             android:maxLength="180"
             android:maxLines="1"
             android:minEms="20"
-            android:textCursorDrawable="@null"
-            android:textSize="@dimen/day_text_size"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
-            android:backgroundTint="@color/white" />
+            android:textCursorDrawable="@null"
+            android:textSize="@dimen/day_text_size"
+            tools:ignore="TouchTargetSizeCheck" />
 
         <Button
             android:id="@+id/log"
@@ -93,12 +95,12 @@
             android:id="@+id/alert"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="-15dp"
             android:gravity="center"
-            android:textStyle="bold"
             android:text="DNI o contraseña incorrectas"
             android:textColor="@color/carrot_orange"
-            android:visibility="invisible"
-            android:layout_marginTop="-15dp"/>
+            android:textStyle="bold"
+            android:visibility="invisible" />
 
     </LinearLayout>
 
